erDiagram
    USERS {
        bigint id PK
        string name
        string email UK
        string type "admin|vendor|attendee, default: user"
        string password
        timestamp email_verified_at
        timestamp created_at
        timestamp updated_at
    }
    VENDORS {
        bigint id PK
        string company_name
        string contact_person
        string email UK
        string phone
        text address
        string website
        enum kyc_status "pending|verified|rejected"
        text kyc_notes
        string bank_name
        string account_holder_name
        string account_number
        string iban
        string swift_code
        boolean is_active
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at "SoftDelete"
    }
    EVENTS {
        bigint id PK
        bigint vendor_id FK
        string title
        text description
        string location
        datetime event_date
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at "SoftDelete"
    }
    TICKET_TYPES {
        bigint id PK
        bigint event_id FK
        string type "VIP|General|etc"
        bigint price "BIGINT UNSIGNED (cents)"
        int inventory
        int sold_count
        datetime available_from
        datetime available_until
        boolean is_active
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at "SoftDelete"
    }
    TICKET_RESERVATIONS {
        bigint id PK
        bigint ticket_type_id FK
        bigint user_id FK
        int quantity
        enum status "locked|released|converted"
        timestamp expires_at
        timestamp created_at
        timestamp updated_at
    }
    WAITLISTS {
        bigint id PK
        bigint ticket_type_id FK
        bigint user_id FK
        int priority_index
        boolean notified
        timestamp created_at
        timestamp updated_at
    }
    ORDERS {
        bigint id PK
        bigint attendee_id FK
        enum status "pending|held|paid|cancelled|expired|refunded"
        bigint total_amount "BIGINT UNSIGNED (cents)"
        datetime hold_expires_at
        timestamp created_at
        timestamp updated_at
    }
    ORDER_ITEMS {
        bigint id PK
        bigint order_id FK
        bigint ticket_type_id FK
        int qty
        bigint price_at_purchase "BIGINT UNSIGNED (cents)"
        timestamp created_at
        timestamp updated_at
    }
    PAYMENTS {
        bigint id PK
        bigint order_id FK
        string gateway "stripe|paypal"
        enum status "pending|authorized|paid|failed|refunded"
        string idempotency_key UK
        string gateway_reference
        bigint amount "BIGINT UNSIGNED (cents)"
        char currency "3 chars"
        datetime paid_at
        timestamp created_at
        timestamp updated_at
    }
    REFUNDS {
        bigint id PK
        bigint payment_id FK
        bigint amount "BIGINT UNSIGNED (cents)"
        string policy_applied
        enum status "pending|approved|completed|failed"
        text reason
        datetime refunded_at
        timestamp created_at
        timestamp updated_at
    }
    PAYOUT_BATCHES {
        bigint id PK
        string batch_reference UK
        enum status "pending|running|completed|failed"
        int total_payouts
        int processed_count
        string resume_token
        datetime started_at
        datetime completed_at
        timestamp created_at
        timestamp updated_at
    }
    PAYOUTS {
        bigint id PK
        bigint vendor_id FK
        bigint payout_batch_id FK
        bigint gross_amount "BIGINT UNSIGNED (cents)"
        bigint commission "BIGINT UNSIGNED (cents)"
        bigint amount "BIGINT UNSIGNED (cents)"
        enum status "pending|processing|paid|failed"
        string transfer_reference
        datetime paid_at
        timestamp created_at
        timestamp updated_at
    }
    NOTIFICATIONS {
        bigint id PK
        bigint recipient_user_id FK
        string type
        string channel "email|webhook|sms"
        enum status "pending|sent|failed"
        int retry_count
        text payload
        datetime sent_at
        timestamp created_at
        timestamp updated_at
    }
    WEBHOOKS {
        bigint id PK
        bigint vendor_id FK
        string url
        string secret
        boolean active
        timestamp created_at
        timestamp updated_at
    }
    DISPUTES {
        bigint id PK
        bigint order_id FK
        enum status "open|investigating|resolved|rejected"
        text reason
        text resolution
        datetime resolved_at
        timestamp created_at
        timestamp updated_at
    }
    ORDER_EVENTS {
        bigint id PK
        bigint order_id FK
        string from_status
        string to_status
        json payload
        timestamp created_at
    }
    PAYMENT_EVENTS {
        bigint id PK
        bigint payment_id FK
        string from_status
        string to_status
        json payload
        timestamp created_at
    }
    REFUND_EVENTS {
        bigint id PK
        bigint refund_id FK
        string from_status
        string to_status
        json payload
        timestamp created_at
    }

    USERS ||--o| VENDORS : "extends_as"
    USERS ||--o{ TICKET_RESERVATIONS : "creates"
    USERS ||--o{ WAITLISTS : "joins"
    USERS ||--o{ ORDERS : "places"
    USERS ||--o{ NOTIFICATIONS : "receives"
    VENDORS ||--o{ EVENTS : "owns"
    VENDORS ||--o{ PAYOUTS : "receives"
    VENDORS ||--o{ WEBHOOKS : "registers"
    EVENTS ||--o{ TICKET_TYPES : "contains"
    EVENTS ||--o{ ORDERS : "collects"
    TICKET_TYPES ||--o{ TICKET_RESERVATIONS : "leases"
    TICKET_TYPES ||--o{ WAITLISTS : "tracks"
    TICKET_TYPES ||--o{ ORDER_ITEMS : "populates"
    ORDERS ||--o{ ORDER_ITEMS : "details"
    ORDERS ||--o{ PAYMENTS : "funds"
    ORDERS ||--o{ REFUNDS : "reverses"
    ORDERS ||--o{ DISPUTES : "disputed_by"
    ORDERS ||--o{ ORDER_EVENTS : "tracked_by"
    PAYMENTS ||--o{ REFUNDS : "reverses"
    PAYMENTS ||--o{ PAYMENT_EVENTS : "tracked_by"
    REFUNDS ||--o{ REFUND_EVENTS : "tracked_by"
    PAYOUT_BATCHES ||--o{ PAYOUTS : "contains"
